--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nux (4.0.1daily13.05.08ubuntu.unity.next-0ubuntu2) UNRELEASED; urgency=low
+
+  * Fixes XIM event text buffer overflow. 
+
+ -- Brandon Schaefer <brandon.schaefer@canonical.com>  Tue, 21 May 2013 12:19:53 -0700
+
 nux (4.0.1daily13.05.08ubuntu.unity.next-0ubuntu1) raring; urgency=low
 
   [ Stephen M. Webb ]
